<resources>
    <string name="app_name">presubmission</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="daftar">Daftar</string>
    <string name="name">Name</string>
    <string name="appname">CeritaKuy</string>
    <string name="textlogout">Keluar</string>
    <string name="textaddstory">Tambah Cerita</string>
    <string name="namaStory">Judul</string>
    <string name="deskripsiStory">Deskripsi</string>
    <string name="edtUpload">Tuliskan ceritamu disini</string>

    <string name="password_error_message">Password tidak boleh kurang dari 8 karakter</string>
    <string name="upload">Upload</string>
    <string name="camera_icon">camera_icon</string>
    <string name="logout_icon">logout_icon</string>
    <string name="fab">FAB</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>